# fitting-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  codecov.yml  release-please-config.json  renovate.json5
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: build-and-test.yml  format-and-lint.yml  release.yml  rust.yml
python/fitting/: gaussian.py
python/fitting/tests/: gaussian.py  linalg.py  linear.py
python/issue-6/: issue-6-incorrect-results.ipynb
scripts/: coverage.sh  setup.sh
src/: error.rs  gaussian.rs  lib.rs  linalg.rs  linear.rs  main.rs
src/gaussian/: deprecated.rs  depricated.rs  error.rs  gaussian.rs  operations.rs
src/linalg/: lu.rs
